--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "graphql": "^16.8.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.0.3",
+    "uuid": "^9.0.1"
   }
 }
