--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
   "homepage": "https://github.com/bryantt23/fso-graphql#readme",
   "dependencies": {
     "@apollo/server": "^4.10.0",
-    "graphql": "^16.8.1"
+    "dotenv": "^16.4.1",
+    "graphql": "^16.8.1",
+    "mongoose": "^8.1.1",
+    "mongoose-unique-validator": "^5.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.3",
