--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
   "homepage": "https://github.com/bryantt23/fso-graphql#readme",
   "dependencies": {
     "@apollo/server": "^4.10.0",
+    "apollo-server-express": "^3.13.0",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.1",
     "graphql": "^16.8.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.1",
     "mongoose-unique-validator": "^5.0.0"
   },
