--- a/package.json
+++ b/package.json
@@ -21,14 +21,18 @@
   "homepage": "https://github.com/bryantt23/fso-graphql#readme",
   "dependencies": {
     "@apollo/server": "^4.10.0",
+    "@graphql-tools/schema": "^10.0.2",
     "apollo-server-express": "^3.13.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "graphql": "^16.8.1",
+    "graphql-subscriptions": "^2.0.0",
+    "graphql-ws": "^5.14.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.1",
-    "mongoose-unique-validator": "^5.0.0"
+    "mongoose-unique-validator": "^5.0.0",
+    "ws": "^8.16.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.3",
