--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@graphql-tools/schema": "^10.0.2",
     "apollo-server-express": "^3.13.0",
     "bcryptjs": "^2.4.3",
+    "dataloader": "^2.2.2",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "graphql": "^16.8.1",
